--- a/css/creative.css
+++ b/css/creative.css
@@ -272,7 +272,7 @@ header .header-content .header-content-inner p {
     text-align: center;
     color: #fff;
     opacity: 0;
-    background: rgba(62, 121, 149, 0.9);
+    background: rgba(46, 46, 46, 0.9);
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -302,8 +302,20 @@ header .header-content .header-content-inner p {
     font-size: 18px;
 }
 
-.pricing-box:hover .portfolio-box-caption {
+.pricing-box .portfolio-box-caption {
     opacity: 1;
+}
+
+.pricing-box .pricing-details {
+    display: none;
+}
+
+.pricing-box:hover .pricing-details {
+    display: block;
+}
+
+.pricing-box:hover .portfolio-box-caption {
+    opacity: 0.9;
 }
 
 @media(min-width:768px) {
